Actually fix dark mode styles for glazy mouse

--- a/src/modules/location-hud/event-locations/great-winter-hunt/styles.css
+++ b/src/modules/location-hud/event-locations/great-winter-hunt/styles.css
@@ -187,13 +187,14 @@ button.campHudSnowballShowdownView__buyButton {
   display: block;
 }
 
+.mh-dark-mode .entry.short.catchsuccessloot[data-mouse-type="glazed"],
 .entry.short.catchsuccessloot[data-mouse-type="glazed"] {
-  color: #000;
+  color: #000 !important;
   background-color: #fcdb28;
   box-shadow: 0 0 10px 8px #fdee96 inset;
 }
 
-.entry.short.catchsuccessloot[data-mouse-type="glazed"] a {
+.mh-dark-mode .entry.short.catchsuccessloot[data-mouse-type="glazed"] a {
   color: #3b5998;
 }
 
